--- a/source/post/2024/2405.md
+++ b/source/post/2024/2405.md
@@ -426,13 +426,170 @@ LIBATFRAME_UTILS_NAMESPACE_END
 
 首先在 [atframe_utils][4] 内部分组件接入了一件切换。
 
-+ 时间轮定时器实现 [jeffies_timer][6] 使用了 `shared_ptr` 和 `weak_ptr` 来保证递归调用和移除时生命周期的有效性。
-+ LRU算法容器 [lru_map][7] 里为了方便管理也使用了 `shared_ptr` 管理引用关系。
-+ 分布式系统和分布式事务的 [WAL模块][8] 内涉及大量的Event Log的管理和订阅关系管理，也采用 `shared_ptr` 管理。
+时间轮定时器实现 [jeffies_timer][6] 使用了 `shared_ptr` 和 `weak_ptr` 来保证递归调用和移除时生命周期的有效性。
+这里通过增加模板参数实现切换支持。
 
-这些都可以直接替换成新模块。
+```cpp
+template <time_t LVL_BITS = 6, time_t LVL_CLK_SHIFT = 3, size_t LVL_DEPTH = 8,
+          memory::compat_strong_ptr_mode PTR_MODE = memory::compat_strong_ptr_mode::kStl>
+class jiffies_timer {
+  //...
+};
+```
+
+LRU算法容器 [lru_map][7] 里为了方便管理也使用了 `shared_ptr` 管理引用关系。
+这个容器为了简化使用，除了在最后面加模板参数外，也加了个简化一点的别名。这样可以不用显示指定hash函数，等于判定，内存分配器的情况下定制智能指针选项。
+
+```cpp
+template <class TKEY, class TVALUE, class THasher = std::hash<TKEY>, class TKeyEQ = std::equal_to<TKEY>,
+          class TOption = lru_map_option<compat_strong_ptr_mode::kStl>,
+          class TAlloc = std::allocator<std::pair<const TKEY, typename lru_map_type_traits<TKEY, TVALUE, TOption>::iterator>>>
+class lru_map {
+  // ...
+};
+
+template <class TKEY, class TVALUE, class TOption, class THasher = std::hash<TKEY>, class TKeyEQ = std::equal_to<TKEY>,
+          class TAlloc = std::allocator<std::pair<const TKEY, typename lru_map_type_traits<TKEY, TVALUE, TOption>::iterator>>>
+using lru_map_with_option = lru_map<TKEY, TVALUE, THasher, TOption, TAlloc>;
+```
+
+分布式系统和分布式事务的 [WAL模块][8] 内涉及大量的Event Log的管理和订阅关系管理，也采用 `shared_ptr` 管理。
+这个模块结构比较复杂切涉及多个组件保持一致，所以另外加了一层traits来实现。
+
+```cpp
+
+enum class wal_mt_mode : int8_t {
+  kSingleThread = 0,
+  kMultiThread = 1,
+};
+
+template <class T, wal_mt_mode MTMode>
+struct LIBATFRAME_UTILS_API_HEAD_ONLY wal_mt_mode_data_trait;
+
+template <wal_mt_mode MTMode>
+struct LIBATFRAME_UTILS_API_HEAD_ONLY wal_mt_mode_func_trait;
+
+template <class T>
+struct LIBATFRAME_UTILS_API_HEAD_ONLY wal_mt_mode_data_trait<T, wal_mt_mode::kSingleThread> {
+  using strong_ptr = memory::strong_rc_ptr<T>;
+  using weak_ptr = memory::weak_rc_ptr<T>;
+};
+
+template <class T>
+struct LIBATFRAME_UTILS_API_HEAD_ONLY wal_mt_mode_data_trait<T, wal_mt_mode::kMultiThread> {
+  using strong_ptr = std::shared_ptr<T>;
+  using weak_ptr = std::weak_ptr<T>;
+};
+
+template <>
+struct LIBATFRAME_UTILS_API_HEAD_ONLY wal_mt_mode_func_trait<wal_mt_mode::kSingleThread> {
+  template <class Y>
+  using enable_shared_from_this = memory::enable_shared_rc_from_this<Y>;
+
+  template <class Y, class Alloc, class... ArgsT>
+  static inline memory::strong_rc_ptr<Y> allocate_strong(const Alloc& alloc, ArgsT&&... args) {
+    return memory::allocate_strong_rc<Y>(alloc, std::forward<ArgsT>(args)...);
+  }
+
+  template <class Y, class F>
+  static inline memory::strong_rc_ptr<Y> static_pointer_cast(F&& f) {
+    return memory::static_pointer_cast<Y>(std::forward<F>(f));
+  }
+
+  template <class Y, class F>
+  static inline memory::strong_rc_ptr<Y> const_pointer_cast(F&& f) {
+    return memory::const_pointer_cast<Y>(std::forward<F>(f));
+  }
+
+#if defined(LIBATFRAME_UTILS_ENABLE_RTTI) && LIBATFRAME_UTILS_ENABLE_RTTI
+  template <class Y, class F>
+  static inline memory::strong_rc_ptr<Y> dynamic_pointer_cast(F&& f) {
+    return memory::dynamic_pointer_cast<Y>(std::forward<F>(f));
+  }
+#endif
+};
+
+template <>
+struct LIBATFRAME_UTILS_API_HEAD_ONLY wal_mt_mode_func_trait<wal_mt_mode::kMultiThread> {
+  template <class Y>
+  using enable_shared_from_this = std::enable_shared_from_this<Y>;
+
+  template <class Y, class Alloc, class... ArgsT>
+  static inline std::shared_ptr<Y> allocate_strong(const Alloc& alloc, ArgsT&&... args) {
+    return std::allocate_shared<Y>(alloc, std::forward<ArgsT>(args)...);
+  }
+
+  template <class Y, class F>
+  static inline std::shared_ptr<Y> static_pointer_cast(F&& f) {
+    return std::static_pointer_cast<Y>(std::forward<F>(f));
+  }
+
+  template <class Y, class F>
+  static inline std::shared_ptr<Y> const_pointer_cast(F&& f) {
+    return std::const_pointer_cast<Y>(std::forward<F>(f));
+  }
+
+#if defined(LIBATFRAME_UTILS_ENABLE_RTTI) && LIBATFRAME_UTILS_ENABLE_RTTI
+  template <class Y, class F>
+  static inline std::shared_ptr<Y> dynamic_pointer_cast(F&& f) {
+    return std::dynamic_pointer_cast<Y>(std::forward<F>(f));
+  }
+#endif
+};
+```
+
+然后把这些类型放进用于统一管理的 `wal_log_operator` 里。
+
+```cpp
+template <class LogKeyT, class LogT, class ActionGetter, class CompareLogKeyT = std::less<LogKeyT>,
+          class HashActionCaseT = std::hash<typename wal_log_action_getter_trait<LogT, ActionGetter>::type>,
+          class EqualActionCaseT = std::equal_to<typename wal_log_action_getter_trait<LogT, ActionGetter>::type>,
+          class Allocator = std::allocator<LogT>, wal_mt_mode MTMode = wal_mt_mode::kMultiThread>
+class wal_log_operator {
+  // ...
+  static constexpr const wal_mt_mode mt_mode = MTMode;
+
+template <class Y, class... ArgsT>
+  static inline typename wal_mt_mode_data_trait<Y, mt_mode>::strong_ptr make_strong(ArgsT&&... args) {
+    using alloc_type = typename std::allocator_traits<log_allocator>::template rebind_alloc<Y>;
+    return wal_mt_mode_func_trait<mt_mode>::template allocate_strong<Y>(alloc_type(), std::forward<ArgsT>(args)...);
+  }
+
+  template <class Y, class Alloc, class... ArgsT>
+  static inline typename wal_mt_mode_data_trait<Y, mt_mode>::strong_ptr allocate_strong(const Alloc& alloc,
+                                                                                        ArgsT&&... args) {
+    return wal_mt_mode_func_trait<mt_mode>::template allocate_strong<Y>(alloc, std::forward<ArgsT>(args)...);
+  }
+
+  template <class Y, class F>
+  static inline typename wal_mt_mode_data_trait<Y, mt_mode>::strong_ptr static_pointer_cast(F&& f) {
+    return wal_mt_mode_func_trait<mt_mode>::template static_pointer_cast<Y>(std::forward<F>(f));
+  }
+
+  template <class Y, class F>
+  static inline typename wal_mt_mode_data_trait<Y, mt_mode>::strong_ptr const_pointer_cast(F&& f) {
+    return wal_mt_mode_func_trait<mt_mode>::template const_pointer_cast<Y>(std::forward<F>(f));
+  }
+
+#if defined(LIBATFRAME_UTILS_ENABLE_RTTI) && LIBATFRAME_UTILS_ENABLE_RTTI
+  template <class Y, class F>
+  static inline typename wal_mt_mode_data_trait<Y, mt_mode>::strong_ptr dynamic_pointer_cast(F&& f) {
+    return wal_mt_mode_func_trait<mt_mode>::template dynamic_pointer_cast<Y>(std::forward<F>(f));
+  }
+#endif
+
+  template <class Y>
+  using strong_ptr = typename wal_mt_mode_data_trait<Y, mt_mode>::strong_ptr;
+  template <class Y>
+  using weak_ptr = typename wal_mt_mode_data_trait<Y, mt_mode>::weak_ptr;
+  template <class Y>
+  using enable_shared_from_this = typename wal_mt_mode_func_trait<mt_mode>::template enable_shared_from_this<Y>;
+};
+```
 
 还有一部分是我们工程里有很多读取策划通过配置Excel转出的数据，这部分访问量也很大。所以我对这个生成读表代码的模板系统 [xres-code-generator][5] 也做了改造支持。
+
+其他业务相关的只能一个一个模块去替换了，我们也在持续替换中。
 
 ## 效果
 
