--- a/source/post/2024/2405.md
+++ b/source/post/2024/2405.md
@@ -29,7 +29,7 @@ type: post
 
 在大多数场景下，这也没太大问题，因为大多数场景下参数传递 `std::shared_ptr` 也好，内存存放 `std::shared_ptr` 也好，通常上下文会存在更多逻辑操作，导致这个CPU Cache Line 失效后重新prefetch的开销占比很小。但是在我们这个场景下情况又有所不同。
 我们采用了BTree来管理有序索引，这样比常规的红黑树来说内存结构会更紧凑，缓存命中率更高。然而在连续大量索引发生变化时，一直要发生Cache失效->重新prefetch，Cache失效->重新prefetch的过程。
-这反而带来了额外的浪费。我们在后来用valgrind分析的过程中也确实验证导这部分的Cache Miss率明显高于其他操作。于是实现一个非线程安全版本的 `shared_ptr` 就被提上了日程。思路其实和 Rust的 [std::rc::Rc][1] 很像。
+这反而带来了额外的浪费。我们在后来用valgrind分析的过程中也确实验证导这部分的Cache Miss率明显高于其他操作。于是实现一个非线程安全版本的 `shared_ptr` 就被提上了日程。思路类似 Rust的 [std::rc::Rc][1]。
 
 > 其实GCC的 STL本身自带费线程安全的内部版本的，可以通过使用
 >
@@ -600,6 +600,8 @@ template <class Y, class... ArgsT>
 ## 未来规划
 
 之前实现 [libcopp][2] 对C++20协程支持的时候也有几处内部生命周期引用的地方是计划中后续改成无Cache Miss的版本的，后续看有空也改造一下吧。也是能减少一些不必要的内部开销。
+
+最终实现的代码开源在 <https://github.com/owent/atframe_utils/blob/main/include/memory/rc_ptr.h> 。
 
 我们也在继续逐渐把一些本来也不是线程安全的模块都换成新智能指针，欢迎有兴趣的小伙伴互相交流研究。
 
