--- a/source/post/2024/2405.md
+++ b/source/post/2024/2405.md
@@ -13,7 +13,7 @@ tags:
   - shared_ptr
   - smart_ptr
   - strong_rc_ptr
-title: 实现一个strong_rc_ptr(非线程安全版本的std::shared_ptr)
+title: 实现strong_rc_ptr(比shared_ptr更快的引用计数智能指针)
 type: post
 ---
 
