--- a/source/post/2024/2405.md
+++ b/source/post/2024/2405.md
@@ -29,7 +29,7 @@ type: post
 
 在大多数场景下，这也没太大问题，因为大多数场景下参数传递 `std::shared_ptr` 也好，内存存放 `std::shared_ptr` 也好，通常上下文会存在更多逻辑操作，导致这个CPU Cache Line 失效后重新prefetch的开销占比很小。但是在我们这个场景下情况又有所不同。
 我们采用了BTree来管理有序索引，这样比常规的红黑树来说内存结构会更紧凑，缓存命中率更高。然而在连续大量索引发生变化时，一直要发生Cache失效->重新prefetch，Cache失效->重新prefetch的过程。
-这反而带来了额外的浪费。我们在后来用valgrind分析的过程中也确实验证导这部分的Cache Miss率明显高于其他操作。于是实现一个非线程安全版本的 `shared_ptr` 就被提上了日程。思路类似 Rust的 [std::rc::Rc][1]。
+这反而带来了额外的浪费。我们在后来用valgrind分析的过程中也确实验证到这部分的Cache Miss率明显高于其他操作。于是实现一个非线程安全版本的 `shared_ptr` 就被提上了日程。思路类似 Rust的 [std::rc::Rc][1]。
 
 > 其实GCC的 STL本身自带费线程安全的内部版本的，可以通过使用
 >
