--- a/source/post/2024/2408.md
+++ b/source/post/2024/2408.md
@@ -5,14 +5,16 @@ categories:
   - Blablabla
 date: 2024-12-29 11:39:45
 draft: true
-id: 2406
+id: 2408
 tags: 
   - opentelemetry
   - otel
   - otel-cpp
-  - trace
+  - HPA
+  - prometheus
+  - metrics
   - 可观测性
-title: 链路跟踪的性能优化
+title: 基于指标的新一代通用策略控制和长状态服务HPA方案
 type: post
 ---
 
@@ -20,16 +22,8 @@ type: post
 
 ## 背景
 
-CPU消耗高
-
-属性多
-
 CPU 10%
 
 ## 基础的部分采样方案
 
-## 动态采样
-
 ## 采样标记
-
-防止定时刷新逻辑中某类任务集中执行，从而导致其他的链路跟踪上报饥饿
