--- a/source/post/2025/2503.md
+++ b/source/post/2025/2503.md
@@ -29,11 +29,10 @@ type: post
 而要求所有逻辑代码保证线程安全，一方面对于深层次有复杂关系的数据，代码复杂度比较高，很容易出错；另一方面如果过多无脑加锁也会一种开销和资源浪费。
 所以我尝试抽象了一组接口来屏蔽这个细节，让业务层可以无脑接入。
 
-## 背景
+## 性能和易用性问题
 
 最早我们使用 [opentelemetry-cpp][1] 比较粗暴，直接调用同步接口。在上报量稍微大点的时候，因为频繁触发视图的属性比较和Merge计算，导致某些场景的CPU开销能占到 10%。
 所以后来进行了一系列优化，第一步骤就是通过一些预统计，减少属性集比较和视图合并。然后采用异步接口上报。
-但是异步接口调用有一定复杂度，比如需要管理上报的采集回调，如果发生reload需要重建注册上报点；还有要适配数据类型和指标类型匹配；还有上报回调要保证线程安全等等。
 
 大致的采集流程如下：
 
@@ -109,8 +108,42 @@ flowchart LR
     AsyncMetricStorage@{ shape: lin-cyl}
 ```
 
+但是异步接口调用有一定复杂度，一个最简单的注册指标的流程如下:
+
+```cpp
+using otel_observer_result_int64 = opentelemetry::metrics::ObserverResultT<int64_t>;
+using otel_observer_result_double = opentelemetry::metrics::ObserverResultT<double>;
+
+auto meter = provider->GetMeter("meter name");
+auto instrument = meter->CreateInt64ObservableGauge("instrument name", "instrument description", "instrument unit");
+
+instrument->AddCallback([](opentelemetry::metrics::ObserverResult result, void* /*private_data*/) {
+    if (opentelemetry::nostd::holds_alternative<opentelemetry::nostd::shared_ptr<otel_observer_result_int64>>(result)) {
+        auto type_result = opentelemetry::nostd::get<opentelemetry::nostd::shared_ptr<otel_observer_result_int64>>(result);
+        if (type_result) {
+            type_result->Observe(static_cast<int64_t>(get_result_value()), {} /* attributes */);
+        }
+    } else if (opentelemetry::nostd::holds_alternative<opentelemetry::nostd::shared_ptr<otel_observer_result_double>>(result)) {
+        auto type_result = opentelemetry::nostd::get<opentelemetry::nostd::shared_ptr<otel_observer_result_double>>(result);
+        type_result->Observe(static_cast<double>(result_value), {} /* attributes */);
+    }
+} /*, void* private_data*/);
+```
+
+这个接口有几个需要注意的地方:
+
++ 上报一个指标，有meter和instrument的概念。目前v1版本是不支持删除callback、instrument和meter的。目前即便v2版本也删不干净。所以如果reload，最好是重新创建provider，那么这里这个meter、instrument和callback都要重新创建和注册。
+
+> 由于最后一个Provider引用释放的时候，otel-cpp会自动调用一次Flush吧所有已经导出的数据强制刷出。这会导致线程Block，所以为了不影响业务主线程。这里还要处理一次Reload的时候另起线程来执行Flush。
+
++ 指标类型和调用Observe的传入类型要匹配，如果涉及浮点和整数转换的话，还要考虑 [epsilon][2] 。
++ 回调函数的签名是 `using ObservableCallbackPtr = void (*)(ObserverResult, void *);` 只能透传一个 `void*` ，如果要包装更复杂的数据透传需要自己封装。
++ 回调执行会跨线程，所以数据上报要保证线程安全。
++ 多源拉取时可能会反复触发回调，所以不能简单地根据回调时间差来计算增量部分，否则可能导致误差。
+
 ## 基础的部分采样方案
 
 ## 采样标记
 
 [1]: https://github.com/open-telemetry/opentelemetry-cpp
+[2]: https://en.cppreference.com/w/cpp/types/numeric_limits/epsilon
