--- a/source/post/2025/2503.md
+++ b/source/post/2025/2503.md
@@ -141,6 +141,12 @@ instrument->AddCallback([](opentelemetry::metrics::ObserverResult result, void* 
 + 回调执行会跨线程，所以数据上报要保证线程安全。
 + 多源拉取时可能会反复触发回调，所以不能简单地根据回调时间差来计算增量部分，否则可能导致误差。
 
+## 自动重注册
+
+
+
+## 上报数据转换
+
 ## 基础的部分采样方案
 
 ## 采样标记
