--- a/source/post/2025/2503.md
+++ b/source/post/2025/2503.md
@@ -599,7 +599,9 @@ rpc::telemetry::opentelemetry_utility::add_global_metics_observable_int64(
     });
 ```
 
+<div style="backgroud-color: black;">
 ![2503-02.png](2503-02.png)
+</div>
 
 再展示个更复杂的动态多层级指标:
 
