优化图片背景

--- a/source/post/2025/2501.md
+++ b/source/post/2025/2501.md
@@ -198,7 +198,9 @@ generate_for_pb_run_generator()
 
 为了降低重复解析pb和建立符号表带来的CPU开销导致的流程缓慢。整个模板引擎的RPC流程尽量采用统一配置文件，加载多个pb file的方式。然后通过配置多组生成组来生成不同的服务和模板。
 
+{{< dom html.class="bg-dark" >}}
 ![2501.01.png](2501.01.png)
+{{< /dom >}}
 
 代码生成的层级分为两类，第一类是全局模板。对应配置中的 `- global:` 。另一类是层级模板，分为外层和里层。外层会对每个模板执行一次渲染，里层模板会对每个内部子结构分别做一次渲染。
 
