--- a/source/post/2025/2503.md
+++ b/source/post/2025/2503.md
@@ -194,7 +194,9 @@ if (now - metrics_item->collected_timepoint > metrics_item->collect_interval) {
 
 由于希望业务层不要关心线程安全的复杂性，所以我们的OTEL层采集在专门的采集线程上，但是业务层的采集总是在主线程执行。中间用无锁队列串起来，大致结构如下:
 
+{{< dom html.class="bg-dark" >}}
 ![2503-01.png](2503-01.png)
+{{< /dom >}}
 
 ## 自动重注册
 
@@ -599,9 +601,7 @@ rpc::telemetry::opentelemetry_utility::add_global_metics_observable_int64(
     });
 ```
 
-<div style="backgroud-color: black;">
 ![2503-02.png](2503-02.png)
-</div>
 
 再展示个更复杂的动态多层级指标:
 
