--- a/source/post/2025/2504.md
+++ b/source/post/2025/2504.md
@@ -703,7 +703,7 @@ flowchart LR
 
 ![2504-42.png](2504-42.png)
 
-这样我们 **第一阶段优化** 就很简单了：
+这样我们 **第一阶段优化** 就很明确了：
 
 - 内部统计聚合，缩减和简化索引，聚合后上报（OTEL库调用降频）
 - 分离上报和采集，减少多线程锁冲突
@@ -902,6 +902,8 @@ flowchart LR
     SyncMetricStorage@{ shape: lin-cyl}
     AsyncMetricStorage@{ shape: lin-cyl}
 ```
+
+<!--![2504-50.png](2504-50.png)-->
 
 为了性能考虑，我们主要使用指标的一部接口。下面是一个简单的注册上百示例：
 
