修复拼写错误

--- a/source/post/2025/2504.md
+++ b/source/post/2025/2504.md
@@ -28,9 +28,9 @@ type: post
 
 ## 前言
 
-近年来可观测性领域越来越成熟，游戏服务的可观测性能力建设日益成为提升产品质量与运维效率的关键环节。随着游戏系统架构的不断复杂化，传统的监控和故障排查方式已难以满足业务高可用和用户体验优化的需求。通过健全的可观测性体系，能够实现对游戏服务全链路的实时监控、异常检测与分析，助力技术团队及时发现和定位问题，推动产品持续优化与稳定迭代，从而为玩家提供更加流畅和可靠的游戏体验。
+近年来可观测性领域越来越成熟，游戏服务的可观测性能力建设日益成为提升产品质量与运维效率的关键环节。随着游戏系统架构的不断复杂化，传统的监控和故障排查方式已难以满足业务高可用和用户体验优化的需求。通过健全的可观测性体系，可以实现对游戏服务全链路的实时监控、异常检测与分析，助力技术团队及时发现和定位问题，推动产品持续优化与稳定迭代，从而为玩家提供更加流畅和可靠的游戏体验。
 
-作为 [OpenTelemetry][1] 社区 [C++ SDK][2] 的核心贡献者，我一直致力于将可观测性能力引入并深度集成和应用到游戏服务框架和业务开发过程中。本文的主要的内容就是分享在这个过程中积累的工程实践和典型案例，并探讨遇到的主要问题及解决思路。
+作为 [OpenTelemetry][1] 社区 [C++ SDK][2] 的核心贡献者，我一直致力于将可观测性能力引入并深度集成和应用到游戏服务框架和业务开发过程中。本文的主要内容是分享在这个过程中积累的工程实践和典型案例，并探讨遇到的主要问题及解决思路。
 
 > [OpenTelemetry][1] 隶属于CNCF（云原生计算基金会），2019年成立，2021年开始孵化。
 
@@ -46,7 +46,7 @@ type: post
 
 ![2504-02.png](2504-02.png)
 
-可以看到，我们可以对单个链路单独分析每一层调用关系的负载、延迟等。不止如此，有一些频台还会有一些特色功能，比如帮我们分析 99%，95%、服务间关系，健康度等。
+可以看到，我们可以对单个链路单独分析每一层调用关系的负载、延迟等。不止如此，有一些平台还会有一些特色功能，比如帮我们分析 99%，95%、服务间关系，健康度等。
 
 ![2504-03-1.png](2504-03-1.png)
 
@@ -56,20 +56,20 @@ type: post
 
 ![2504-04.png](2504-04.png)
 
-和传统方案对比，这里的优势是我们可以给上报指标大很多标签。然后在面板上随时切换。
-通常情况下，我们有时候某个研发环境出故障，只有特定环境、特定类型的服务故障。这时候就可以通过多维度切换快速找到问题所在的服务。
+和传统方案对比，这里的优势是我们可以给上报指标大打多标签。然后在面板上随时切换。
+通常情况下，我们有时候某个研发环境出故障，只有特定环境、特定类型的服务故障。这时候就可以通过多维度切换，快速找到问题所在的服务。
 
 另外也可以很方便地统计各类资源占用大盘，来给我们各类服务的资源配比提供指导。
 
-除了基础的系统进程层面的信息外，也能助力我们框架层的监控。比如RPC、错误分析、数据库占用等等。
+除了基础的系统进程层面的信息外，也能助力我们框架层的监控。比如RPC、错误分析、数据库资源占用等等。
 
 ![2504-05.png](2504-05.png)
 
 ![2504-06.png](2504-06.png)
 
-我们系统里数据库字段有最大长度，存入数据库的是pb打包后的二进制。长度是动态的，上面的图里有分析数据库字段占用，情况。在快要耗尽时告警扩容。
-我们曾今发现过一个IO问题，交易行服务在停服时需要保存大量的订单数据，会导致集中保存。大量的IO导致出发了公共集群数据库的限频。
-然后后台失败重试，导致了雪崩。
+我们系统里数据库字段有最大长度，存入数据库的是pb打包后的二进制。长度是动态的，上面的图里有分析数据库字段占用情况。在快要耗尽时告警扩容。
+我们曾经发现过一个IO问题，交易行服务在停服时需要保存大量的订单数据，会导致集中保存。大量的IO导致触发了公共集群数据库的限频。
+然后后台失败重试，最终导致雪崩。
 
 ![2504-07.png](2504-07.png)
 
@@ -79,11 +79,11 @@ type: post
 
 ![2504-08.png](2504-08.png)
 
-我们同样提供交易行订单分析能力给策划监控实时市场价格和订单分布变化，以便做宏观调控。
+我们同样为策划提供交易行订单分析能力，用于监控实时市场价格和订单分布变化，以便做宏观调控。
 
 ![2504-09.png](2504-09.png)
 
-并且在Steam新品节期间比安全组件更快发现工作室倒金行为。
+并且在Steam新品节期间，比安全组件更快发现工作室倒金行为。
 
 ![2504-10.png](2504-10.png)
 
@@ -615,7 +615,7 @@ long sysconf(int name) { //NOLINT: runtime/int
 [OTEL-CPP][2] 自带一个Batch Processor。它会在后台把收到的各类Record先合并后再通过RPC发到远程服务器。
 大多数情况再BatchProcessor合并数据之后，IO不会成为瓶颈。
 
-但是曾今tRPC接入Logs模块上报大量Logs的时候，发现会导致日志丢失。
+但是曾经tRPC接入Logs模块上报大量Logs的时候，发现会导致日志丢失。
 
 由于BatchProcessor收到消息的时候时先推到内部的无锁队列的。在发送过程中持续收到的消息会继续进到无所队列。
 但是这个队列不能无限长，超过最大限制了就会Drop。同时，[OpenTelemetry][1] 规范要求Processor对Exporter的导出接口调用必须单线程。
