--- a/source/post/2022/2210.md
+++ b/source/post/2022/2210.md
@@ -30,7 +30,7 @@ type: post
 在2年多前我也初步体验过了 [nftables][6] ，当时写了个 [《nftables初体验》][8] 。并且开始使用 [nftables][6] 来实现对家里软路由的管理。
 而去年的时候，我也尝试用 [nftables][6] 实现了双拨（详见: [《折腾一下nftables下的双拨》][9]）并且可以搭配TPROXY透明代理使用。
 
-但是由于 [nftables][6] 的生态建设仍然时落后于 [iptables][7] ，导致我一致没能完全把家里的软路由全部迁移到 [nftables][6] 上来。
+但是由于 [nftables][6] 的生态建设仍然时落后于 [iptables][7] ，导致我一直没能完全把家里的软路由全部迁移到 [nftables][6] 上来。
 剩下的部分主要有两处，一处是桥接的重路由，另一个是我原来的策略路由会根据域名解析动态地写 [ipset][10] ，然后根据 [ipset][10] 来决定是否走tproxy。
 前者之前和别人讨论过说是我之前测试时候用地地址不对，理论上是有解的（我还没测试）。
 而后者由于 [nftables][6] 有自己的 set 结构，且并没有指令可以访问 [ipset][10]，并且我之前用的无论是 [dnsmasq][11] 还是 [smartdns][12] 都不支持直接写 [nftables][6]，所以就一直没有完全替换。
