--- a/source/post/2025/2505.md
+++ b/source/post/2025/2505.md
@@ -12,19 +12,19 @@ tags:
   - fmtlog
   - log
   - coroutine
-title: C++小协程栈和临时变量及作用域的栈溢出问题
+title: C++小协程栈和临时变量及作用域的栈溢出问题分析
 type: post
 ---
 
 ## 背景
 
-近期再给一个项目换一些底层接口的日志处理部分。把原始的类 `printf` 的格式化方式换成 [fmtlib][1] / [C++ 20 Text Formatting][2] 的方案。
+近期在给一个项目换一些底层接口的日志处理部分。把原始的类 `printf` 的格式化方式换成 [fmtlib][1] / [C++ 20 Text Formatting][2] 的方案。
 
-然后发现，替换完一段没有运行到的代码后，会发生内存写坏的情况。
+然后发现，替换完一段未执行的代码后，会发生内存写坏的情况。
 
 ## 问题分析
 
-通过跟踪生成的汇编和 gdb 的 `info frame` 位置。发现替换之后，栈帧位置大幅提高了。比如对这类代码:
+通过跟踪生成的汇编和 gdb 的 `info frame` 位置。发现替换之后，栈帧位置大幅增加了。比如对这类代码:
 
 ```cpp
 #define LOGFMT(...)                                                 \
@@ -52,17 +52,17 @@ void func2() {
 }
 ```
 
-在 `LOGFMT(...)` 宏的实现里，使用 `fmt::format_to_n` 比 `snprintf` 对 `func1` 到 `func2` 的函数栈顶增量大幅提高。
+在 `LOGFMT(...)` 宏的实现里，使用 `fmt::format_to_n` 比 `snprintf` 对 `func1` 到 `func2` 的函数栈顶增量大幅增加。
 
-理论上， `LOGFMT()` 的代码都处于子作用域里，无论是临时变量还是子域里的变量，出了作用域之后应该可以释放并被复用。
+理论上， `LOGFMT()` 的代码都处于子作用域里，无论是临时变量还是子作用域里的变量，出了作用域之后应该可以释放并被复用。
 但是现在各个编译器（包括GCC、Clang和MSVC）似乎是为了方便调试信息定位和区分变量，都没有复用这部分栈空间。
 
-而在我们项目工程里，有些地方使用了64K栈的协程。我改造的地方属于日志相关的模块，被大量多层次使用。
-这两个因素叠加以后，恰好成为了压倒骆驼的最后一根稻草。
+而在我们项目工程里，有些地方使用了64K栈的协程。我改造的地方属于日志相关的模块，被大量多层级使用。
+这两个因素叠加以后，恰好成为了压死骆驼的最后一根稻草。
 
 ### 问题测试代码
 
-这里贴一下独立的复现和Test代码:
+这里贴一下独立的复现和测试代码:
 
 ```cpp
 // -std=c++17 -O0 -g -ggdb -fno-omit-frame-pointer
@@ -273,11 +273,11 @@ from func_no_var_fmt_once, previous offset: 128, top offset: 1984
 (LEAF) from func_no_var_no_fmt, previous offset: 48, top offset: 2032
 ```
 
-可以看到，每次调用fmt接口增量都挺大。在 `-O2` 下可能是涉及内存对齐（我没再去细看汇编），offset会更大。
+可以看到，每次调用fmt接口增量都挺大。在 `-O2` 下可能是涉及内存对齐（我没有再仔细查看汇编），offset会更大。
 
 ## 解决方案
 
-这个问题我试了一些方案，都没法零开销地解决这个问题。最后采用的方法是利用匿名的Lambda做 一次中转。相当于把内存增量控制在Lambda表达式对象本身的开销上。
+这个问题我试了一些方案，都无法零开销地解决这个问题。最后采用的方法是利用匿名的Lambda做一次中转。相当于把内存增量控制在Lambda表达式的对象本身的开销上。
 
 按上面的代码例子就是 `LOGFMT(...)` 改成如下形式, 其他代码不变:
 
@@ -328,11 +328,11 @@ from func_no_var_fmt_once, previous offset: 48, top offset: 1024
 
 ## 最后
 
-这个问题大多数场景不会遇到，但是涉及很小栈的协程，或者类似其他的应用场景可能都会碰到。
+这个问题大多数场景不会遇到，但是涉及栈很小的协程，或者类似其他的应用场景可能都会碰到。
 
-> 比如 <https://github.com/yuanzhubi/call_in_stack> 的使用场景。之前和这个库的作者交流说是用在流媒体处理的某些处理业务里。
+> 比如 <https://github.com/yuanzhubi/call_in_stack> 的使用场景。之前和这个库的作者交流说是用在流媒体处理的某些业务处理里。
 
-我暂时没有进一步研究是否有跨平台的方案告知编译器去完全复用这块内存，如果能的话应该是最佳的解法。
+我暂时没有进一步研究是否有跨平台的方案告知编译器去完全复用这块内存，如果可以的话应该是最佳的解法。
 
 也欢迎有兴趣的小伙伴们互相交流探讨。
 
