--- a/source/post/2025/2505.md
+++ b/source/post/2025/2505.md
@@ -277,7 +277,7 @@ from func_no_var_fmt_once, previous offset: 128, top offset: 1984
 
 ## 解决方案
 
-这个问题我试了一些方案，都无法零开销地解决这个问题。最后采用的方法是利用匿名的Lambda做一次中转。相当于把内存增量控制在Lambda表达式的对象本身的开销上。
+这个问题我试了一些方案，都无法零开销地解决这个问题。最后采用的方法是利用匿名的Lambda对象做一次中转。相当于把内存增量控制在Lambda表达式的对象本身的开销上。(直接加函数中转可能会被内联，从而导致栈仍然无法被复用)
 
 按上面的代码例子就是 `LOGFMT(...)` 改成如下形式, 其他代码不变:
 
