--- a/source/post/2026/2601.md
+++ b/source/post/2026/2601.md
@@ -7,13 +7,15 @@ date: 2026-01-01 17:15:45
 draft: false
 id: 2601
 tags: 
-  - protobuf
-  - ABI
+  - caddy
+  - squid
+  - 反向代理
+  - reverse_proxy
 title: 给内网部署Squid-通用HTTP下载缓存
 type: post
 ---
 
-# 背景
+## 背景
 
 近期，公司代理侧的流量负担持续上升；在高峰期访问常见开发资源（包管理器、SDK、依赖镜像、CDN 文件等）会出现明显抖动。为降低重复下载带来的外网带宽开销与峰值波动，决定在内网引入一套“通用下载缓存代理”。
 
