修复配置挂载

--- a/source/post/2026/2601.md
+++ b/source/post/2026/2601.md
@@ -410,10 +410,12 @@ public-cdn.cloud.unity3d.com {
 ```bash
 podman build -f squid.Dockerfile -t squid-cache .
 
+# 注意这里只挂载squid.conf文件和conf.d目录，因为 /etc/squid 下有其他文件，不能掩盖，否则会启动失败。
 podman run -d \
   --name squid \
   -p 3128:3128 \
-  -v /path/to/squid/etc:/etc/squid:ro \
+  -v /path/to/squid/etc/squid.conf:/etc/squid/squid.conf:ro \
+  -v /path/to/squid/etc/conf.d:/etc/squid/conf.d:ro \
   -v /path/to/squid/script:/opt/squid/script:ro \
   -v /path/to/squid/cache:/var/spool/squid \
   -v /path/to/squid/logs:/var/log/squid \
@@ -442,7 +444,7 @@ squid -k reconfigure
 
 ### 3.3 验证与观测（命中率与空间）
 
-建议把“能不能用”和“有没有命中”分开验证：
+我们可以把“能不能用”和“有没有命中”分开验证：
 
 - **重写逻辑**：用 `echo URL | python3 store_id_rewriter.py` 快速确认 OK/ERR 是否符合预期。
 - **命中情况**：从 `access.log` 观察 HIT/MISS/REVALIDATE。
@@ -479,7 +481,7 @@ podman exec squid squid -k rotate
 
 这样扩展的好处是：规则可审计、可回滚，且默认不会误把未知域名纳入重写。
 
-## 5. 风险与边界（为什么这套设计“保守但稳”）
+## 5. 风险和边界
 
 - **误剥离参数的风险**：最危险的不是“命中率低”，而是“命中到错误内容”。因此策略里必须有排除与条件剥离。
 - **强制缓存头的风险**：只建议用于版本化/可判定稳定的下载内容；对 API/元数据保持短缓存或不缓存。
