--- a/source/post/2026/2604.md
+++ b/source/post/2026/2604.md
@@ -29,7 +29,7 @@ type: post
 同时，出海场景的另一个问题是跨大区网络很不稳定。有些场景可以用专线缓解，但是专线死贵死贵。所以我们有些场景会走公网流量。
 这就需要一方面隔离部分流量，防止部分网络不稳定影响整体服务健康，可以降级服务但不能不可用。另一方面走公网流量得部分也需要加强安全性，要走更严格的密钥协商和加密算法。
 
-有一些其他解决方案，为了兼容老接口和流程，强行把云下的流程搬到云上（比如腾讯的tbuspp，给每个podsidecar注入一个agent进程），其实一方面有额外不必要的负担，另一方面也反而丢失了原来设计上解决的一些通道管理上的问题。
+有一些其他解决方案，为了兼容老接口和流程，强行把云下的流程搬到云上（比如腾讯的tbuspp，给每个pod sidecar注入一个agent进程），其实一方面有额外不必要的负担，另一方面也反而丢失了原来设计上解决的一些通道管理上的问题。
 我这次打算彻底整体重构 [libatbus][libatbus], 不考虑协议层向前兼容（大部分API还是得兼容）。可以在协议设计层面来解决掉这些问题。
 
 本文主要关注于路由算法层面的改进。
@@ -240,27 +240,27 @@ std::list<connection::ptr_t> data_conn_;  // mem > shm > tcp
 
 > 约定：以下关系均以“判定 X 与 Y 的关系”为视角。
 
-补充说明：这里的 *RelayHub/RelayLeaf* 用于描述在“转发拓扑/汇聚层级”上的相对位置：Hub 表示承担转发/汇聚职责的节点，Leaf 表示挂载在某个 Hub 之下的节点。实际连接与消息收发是双向的，只是我们在判定关系时会选定参考点（X）来描述相对位置。
+补充说明：这里的 *Upstream/Downstream* 用于描述在“转发拓扑/汇聚层级”上的相对位置：Upstream 表示承担转发/汇聚职责的节点，Downstream 表示挂载在某个 Upstream 之下的节点。实际连接与消息收发是双向的，只是我们在判定关系时会选定参考点（X）来描述相对位置。
 
 | 关系(中文) | 新算法英文名            | 老英文名               | 定义                                                                                                                                                          |
 | ---------- | ----------------------- | ---------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | 自己       | **Self**                | **self**               | $X = Y$                                                                                                                                                       |
-| 代理父节点 | **ImmediateRelayHub**   | **parent**             | 若 $X \to \* $ 的消息需要经由 $Y$ 转发（$Y$ 是 $X$ 的一跳 *RelayHub*）                                                                                        |
-| 间接父节点 | **TransitiveRelayHub**  | **parent**             | 若存在路径 $X \to \cdots \to Y$ 且路径上的节点均承担转发/汇聚（$Y$ 是 $X$ 的多跳 *RelayHub*）                                                                 |
-| 直接子节点 | **ImmediateRelayLeaf**  | **child**              | 若 $X$ 挂载在 $Y$ 之下且 $Y$ 是 $X$ 的一跳 *RelayHub*（从 $Y$ 的视角，$X$ 是其直接 *RelayLeaf*）                                                              |
-| 间接子节点 | **TransitiveRelayLeaf** | **child**              | 若 $X$ 可视作挂载在 $Y$ 之下的多跳 *RelayLeaf*（跨越若干层 Hub）                                                                                              |
-| 邻居节点   | **SameHubPeer**         | 通过 **contains** 接口判定 | 若 $X$ 与 $Y$ 共享同一个 *ImmediateRelayHub*（即它们的直属 Hub 相同）                                                                                         |
-| 远方节点   | **AdjacentHubPeer**     | 通过 **contains** 接口判定 | 设 $H_X$ 为 $X$ 的 *ImmediateRelayHub*，$H_Y$ 为 $Y$ 的 *ImmediateRelayHub*；若 $H_X$ 与 $H_Y$ 互为 *SameHubPeer*（Hub 层相邻），则 $X$ 与 $Y$ 互为远端对等体 |
+| 代理父节点 | **ImmediateUpstream**   | **parent**             | 若 $X \to \* $ 的消息需要经由 $Y$ 转发（$Y$ 是 $X$ 的一跳 *Upstream*）                                                                                        |
+| 间接父节点 | **TransitiveUpstream**  | **parent**             | 若存在路径 $X \to \cdots \to Y$ 且路径上的节点均承担转发/汇聚（$Y$ 是 $X$ 的多跳 *Upstream*）                                                                 |
+| 直接子节点 | **ImmediateDownstream**  | **child**              | 若 $X$ 挂载在 $Y$ 之下且 $Y$ 是 $X$ 的一跳 *Upstream*（从 $Y$ 的视角，$X$ 是其直接 *Downstream*）                                                              |
+| 间接子节点 | **TransitiveDownstream** | **child**              | 若 $X$ 可视作挂载在 $Y$ 之下的多跳 *Downstream*（跨越若干层 Upstream）                                                                                              |
+| 邻居节点   | **SameUpstreamPeer**         | 通过 **contains** 接口判定 | 若 $X$ 与 $Y$ 共享同一个 *ImmediateUpstream*（即它们的直属 Upstream 相同）                                                                                         |
+| 远方节点   | **OtherUpstreamPeer**     | 通过 **contains** 接口判定 | 设 $H_X$ 为 $X$ 的 *ImmediateUpstream*，$H_Y$ 为 $Y$ 的 *ImmediateUpstream*；若 $H_X$ 与 $H_Y$ 互为 *SameUpstreamPeer*（Upstream 层相邻），则 $X$ 与 $Y$ 互为远端对等体 |
 
 原来的树形路由逻辑里是通过 subnet 判定，属于纯算法可计算的关系。目标ID落在自己的子网范围内，则目标是自己的下游节点；目标的ID是自己的父节点地址，（其子网范围包含自己），则目标是自己的上游节点；目标的ID也在自己的父节点子网范围内，则目标是自己的邻居节点或远方节点；否则是自己的远方节点。
 两个节点间的关系是 **邻居节点** 还是 **远方节点** 是由 **代理父节点** 根据是否双方都是 **直接子节点** 决定的。
 
 而在新的路由关系中，我们理论上只需要上报： **A节点 -> |代理父节点| -> B节点** 。其他的都能根据算法得出。
 
-- 由 **A节点 -> |代理父节点| -> B节点** , 我们可以获得直接的关系有 **Self** , **ImmediateRelayHub** , **ImmediateRelayLeaf** 。算法复杂度为O(1)。
-- 如果 **A节点 -> |代理父节点| -> C节点** , **B节点 -> |代理父节点| -> C节点** 。则他们是 **SameHubPeer** 关系，算法复杂度为O(1)。
-- 如果 **A节点** 的 ***代理父节点*** 链路包含 **B节点** ，或 **B节点** 的 ***代理父节点*** 链路包含 **A节点** ，它们是 **TransitiveRelayHub** 或 **TransitiveRelayLeaf** 子节点关系。这里涉及多级查找，但通常不会很深。可以考虑优化为如果深度很大，使用全局Atomic版本号比较+缓存父节点链路，如果深度小，直接链式查找。
-- 其他的就全部是 **AdjacentHubPeer** 节点了。
+- 由 **A节点 -> |代理父节点| -> B节点** , 我们可以获得直接的关系有 **Self** , **ImmediateUpstream** , **ImmediateDownstream** 。算法复杂度为O(1)。
+- 如果 **A节点 -> |代理父节点| -> C节点** , **B节点 -> |代理父节点| -> C节点** 。则他们是 **SameUpstreamPeer** 关系，算法复杂度为O(1)。
+- 如果 **A节点** 的 ***代理父节点*** 链路包含 **B节点** ，或 **B节点** 的 ***代理父节点*** 链路包含 **A节点** ，它们是 **TransitiveUpstream** 或 **TransitiveDownstream** 子节点关系。这里涉及多级查找，但通常不会很深。可以考虑优化为如果深度很大，使用全局Atomic版本号比较+缓存父节点链路，如果深度小，直接链式查找。
+- 其他的就全部是 **OtherUpstreamPeer** 节点了。
 
 ### 问题二: 兄弟节点不再总是直连？
 
@@ -268,7 +268,7 @@ std::list<connection::ptr_t> data_conn_;  // mem > shm > tcp
 
 ![](./2604-new-route-cross-region-proxy.excalidraw)
 
-**区域1-Proxy1** 和 **区域2-Proxy1** 永不互通。即便他们是 **SameHubPeer** 关系。而 **区域1-Proxy1** 和 **区域1-Proxy2** 是互通的，并且他们不需要经过 **跨大区Proxy节点** 下发直连消息就应该直接互通。
+**区域1-Proxy1** 和 **区域2-Proxy1** 永不互通。即便他们是 **SameUpstreamPeer** 关系。而 **区域1-Proxy1** 和 **区域1-Proxy2** 是互通的，并且他们不需要经过 **跨大区Proxy节点** 下发直连消息就应该直接互通。
 
 也就是说，是否能够直连应该是带策略的。我们可以用类似策略路由的方式来，在 [libatapp][libatapp] 层会有创建连接的流程。可以在这个流程里判定是走代理还是走直连，这个操作不会频繁，所以通过对比属性集的开销还可以接受。
 但是在上游代理节点中，原本有判定两个节点是否通知直连的操作，如果每次转发消息包都去走策略判定属性集开销会过高了，所以我们可以直接提供个全局关闭的参数直接不再通过父节点通知直连了。
